Created attachment 192491 [details] suggested patch Quota calculation for NFS quotas over 2Tbyte fails due to overflow. It also fails if the remote rpc.rquotad sends rq_bsize less than DEV_BSIZE, in this case underflow. See also https://bugs.freebsd.org/bugzilla/show_bug.cgi?id=221697
A commit references this bug: Author: cem Date: Mon Apr 16 19:33:04 UTC 2018 New revision: 332632 URL: https://svnweb.freebsd.org/changeset/base/332632 Log: quota(1): Fix calculation overflow and underflow For very large quotas, do the multiplication as a 64 bit value to avoid overflow. For very small block sizes (smaller than DEV_BSIZE), multiple first before dividing by block size to avoid underflow. PR: 227496 Submitted by: Per Andersson <pa AT chalmers.se> Sponsored by: Dell EMC Isilon Changes: head/usr.bin/quota/quota.c
*** Bug 221697 has been marked as a duplicate of this bug. ***